--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="style.css">
-  <script src="main.js" charset="utf-8"></script>
+  <link rel="stylesheet" href="/assets/css/style.css">
+  <script src="/assets/js/main.js" charset="utf-8"></script>
   <link href="https://fonts.googleapis.com/css?family=Anton&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Changa&display=swap" rel="stylesheet">
   <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
@@ -41,19 +41,19 @@
 
           <div class="hubung">
             <div class="med">
-              <a href="https://www.facebook.com/abdul.mantemanduyye?ref=bookmarks" target="_blank"><img src="assets/facebook.svg" alt=""></a>
+              <a href="https://www.facebook.com/abdul.mantemanduyye?ref=bookmarks" target="_blank"><img src="assets/img/facebook.svg" alt=""></a>
             </div>
             <div class="med">
-              <a href="https://www.instagram.com/mustaf13870/?hl=id" target="_blank"><img src="assets/instagram.svg" alt=""></a>
+              <a href="https://www.instagram.com/mustaf13870/?hl=id" target="_blank"><img src="assets/img/instagram.svg" alt=""></a>
             </div>
             <div class="med">
-              <a href="https://www.linkedin.com/in/abdul-mustafa-a81504190/" target="_blank"><img src="assets/linkedin.svg" alt=""></a>
+              <a href="https://www.linkedin.com/in/abdul-mustafa-a81504190/" target="_blank"><img src="assets/img/linkedin.svg" alt=""></a>
             </div>
             
           </div>
         </div>
         <div class="foto">
-          <img src="photo.jpg" alt="">
+          <img src="/assets/img/photo.jpg" alt="">
         </div>
       </section>
     </div>
@@ -61,9 +61,9 @@
   <div class="ket">
     <section class="keterangan">
       <div class="left">
-        <div class="icon actived" title="My Story" onclick="story()"><img src="assets/script.svg" alt=""></div>
-        <div class="icon" title="About Me" onclick="about()"><img src="assets/man.svg" alt=""></div>
-        <div class="icon" title="My Skills" onclick="skill()"><img src="assets/objective.svg" alt=""></div>
+        <div class="icon actived" title="My Story" onclick="story()"><img src="assets/img/script.svg" alt=""></div>
+        <div class="icon" title="About Me" onclick="about()"><img src="assets/img/man.svg" alt=""></div>
+        <div class="icon" title="My Skills" onclick="skill()"><img src="assets/img/objective.svg" alt=""></div>
       </div>
       <div class="right">
         <div class="story" id="story">
